# twominds

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  EXTENDING.md  LICENSE  README.md  model_jsons.keys.example  pyproject.toml  variance_experiment.py
.github/workflows/: ci.yml
coherence_variance/: README.md  __init__.py  analyze.py  category_bars.py  category_chart.py  cli.py  cluster.py  cost.py  embed.py  families.py  families_report.py  generate.py  judge.py  merge.py  metrics.py  models.py  multi_report.py  plan.py  questions.py  report.py  report_ui.py  run_meta.py  run_registry.py  store.py  stress_data.yaml
coherence_variance/cli/: __init__.py  _app.py  _options.py  _orchestrate.py  _reps.py  analyze_cmd.py  budget_cmd.py  report_cmd.py  run_cmd.py  stress_cmd.py
coherence_variance/questions/: _rosters.yaml
coherence_variance/report_assets/: families.css  families.js
tests/: __init__.py  conftest.py  test_cli.py  test_cluster.py  test_consistency.py  test_cost.py  test_families.py  test_fused_judge.py  test_generate.py  test_judge.py  test_judge_pipeline.py  test_merge.py  test_metrics.py  test_models.py  test_questions.py  test_report.py  test_report_ui.py  test_reps.py  test_run_meta.py  test_run_registry.py  test_store.py  test_stress.py  test_variance_cli.py  test_variance_cluster.py  test_variance_consistency.py  test_variance_cost.py  test_variance_families.py  test_variance_generate.py  test_variance_judge.py  test_variance_merge.py  test_variance_metrics.py  test_variance_models.py  test_variance_questions.py  test_variance_report.py  test_variance_reps.py  test_variance_store.py  test_variance_stress.py
twominds/: README.md  __init__.py  analyze.py  category_bars.py  category_chart.py  consistency.py  cost.py  families_report.py  generate.py  judge.py  judge_pipeline.py  multi_report.py  report.py  report_ui.py  run_meta.py  run_registry.py  store.py  stress.py  stress_data.yaml
(+28 files in other folders)
