[project]
name = "coherence-variance"
version = "0.1.0"
description = "Response-variance / coherence experiments on LLMs: repeated free-form sampling scored by a cross-sample LLM judge and embedding clustering."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Robert Graham" },
    { name = "Phil Blandfort" },
    { name = "Yariv Barsheshat" },
]
keywords = ["llm", "evals", "coherence", "consistency", "ai-safety", "inspect-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.45.2",
    "inspect-ai>=0.3.233",
    "matplotlib>=3.10.7",
    "numpy>=1.26.0,<2.0.0",
    "openai>=1.63.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.2",
    "tiktoken>=0.7.0",
    "typer>=0.9.0",
]

[project.scripts]
coherence-variance = "coherence_variance.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["coherence_variance"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
# The optional `-b local` embedding backend (sentence-transformers) pulls in
# torch — by far the heaviest part of the install — so it is NOT a default
# group: a bare `uv sync` stays lean and the default embedding backend is the
# API-priced openai-3-small. Opt in with `uv sync --group local-embeddings`.
local-embeddings = [
    "sentence-transformers>=5.5.1",
    "torch>=2.5.1",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
